--- a/merlynn_park_hotel/docker-compose.yml
+++ b/merlynn_park_hotel/docker-compose.yml
@@ -1,5 +1,4 @@
 # version: '3'
-
 services:
   rabbit:
     container_name: nameko-example-rabbitmq
@@ -17,6 +16,7 @@ services:
       MYSQL_DATABASE: "merlynn_park_hotel"
       MYSQL_ROOT_PASSWORD: "password"
     volumes:
+     - mysql_data:/var/lib/mysql
      - ./mysql-init:/docker-entrypoint-initdb.d
     restart: always
 
@@ -56,3 +56,7 @@ services:
       RABBIT_USER: "guest"
       RABBIT_PASSWORD: "guest"
       RABBIT_MANAGEMENT_PORT: "15672"
+
+volumes:
+  mysql_data:
+    driver: local
